# src/swagger.example.json
@@ -1,5 +1,5 @@
 {
-	"swagger": "2.0",
+	"openapi": "3.0.0",
 	"info": {
 		"version": "1.0.0",
 		"title": "TS-Express-Mongo Starter Code",
@@ -9,13 +9,11 @@
 			"email": "ank.knr@gmail.com"
 		}
 	},
-	"host": "localhost:5800",
-	"basePath": "/api",
-	"schemes": ["http"],
+	"schemes": ["http", "https"],
 	"consumes": ["application/json"],
 	"produces": ["application/json"],
 	"paths": {
-		"/books": {
+		"/example/books": {
 			"get": {
 				"description": "Returns all books",
 				"operationId": "findBooks",
@@ -69,7 +67,7 @@
 				}
 			}
 		},
-		"/books/{bookId}": {
+		"/example/books/{bookId}": {
 			"get": {
 				"description": "Returns a user based on a single ID, if the user does not have access to the Book",
 				"operationId": "findBookById",
